--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 flink:
   app-name: flink-job
   submit-jobs-on-app-start: true
+
+jobs:
+  simple-job:
+    enabled: false
+  kafka-data-gen-job:
+    enabled: true
+    operators:
+      deduplicator:
+        ttl:
+          app: 7d
+
+kafka:
+  group-id: group_id
+  bootstrap-servers: localhost:9092
+  topics:
+    publication-topic: "test"
+
