--- a/deploy/kafka_broker.yaml
+++ b/deploy/kafka_broker.yaml
@@ -34,11 +34,11 @@ spec:
             - name: KAFKA_BROKER_ID
               value: "1"
             - name: KAFKA_ZOOKEEPER_CONNECT
-              value: 10.111.105.222:2181
+              value: 10.97.228.119:2181
             - name: KAFKA_LISTENERS
               value: PLAINTEXT://:9092
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka-broker:9092
+              value: PLAINTEXT://kafka-service.kafka.svc.cluster.local:9092
           image: wurstmeister/kafka
           imagePullPolicy: IfNotPresent
           name: kafka-broker
