--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ jobs:
 
 kafka:
   group-id: group_id
-  bootstrap-servers: localhost:9092
+  bootstrap-servers: kafka-service.kafka.svc.cluster.local:9092
   topics:
-    publication-topic: "test"
+    publication-topic: "publication-topic"
 
